--- a/regalos.html
+++ b/regalos.html
@@ -42,28 +42,38 @@
 <div class="compra">
   <div class="imagenproducto" style="background-image: url(./assets/TICKET_dorado.webp);">  </div>
   <p class="productodescripcion"> <B>TICKET DORADO</B> <br><br> (CANJEA 1 CARTA LEGENDARIA)</p>
+  <button class="botonCopiar" data-codigo="036SUPERHEROESMICHIBOXSECRET">1 TICKET GRATIS</button>
+</div>
+
+<div class="compra">
+  <div class="imagenproducto" style="background-image: url(./assets/caja_box_elite_03.webp);">  </div>
+  <p class="productodescripcion"> <B>CAJA PREMIUM</B> <br><br> (CAJA MICHI-BOX <br> ELITE-PREMIUM)</p>
   <button class="botonCopiarSINSTOCK" >NO DISPONIBLE</button>
 </div>
 
 <div class="compra">
-  <div class="imagenproducto" style="background-image: url(./assets/caja_sorpresa.webp);">  </div>
-  <p class="productodescripcion"> <B>CAJA PREMIUM</B> <br><br> (CAJA DE CARTÓN <br> PREMIUM)</p>
+  <div class="imagenproducto" style="background-image: url(./assets/SOBRE_COMPRA_01.webp);">  </div>
+  <p class="productodescripcion"> <B>SOBRE DE CARTAS</B> <br><br> (SOBRE DE CARTAS <br>MICHI-BOX )</p>
   <button class="botonCopiarSINSTOCK" >NO DISPONIBLE</button>
 </div>
 
 <div class="compra">
-  <div class="imagenproducto" style="background-image: url(./assets/bigote_falso.webp);">  </div>
-  <p class="productodescripcion"> <B>BIGOTE FALSO</B> <br><br> (UN BIGOTE FALSO <br> PARA UN GATO)</p>
+  <div class="imagenproducto" style="background-image: url(./assets/SOBRE_COMPRA_02.webp);">  </div>
+  <p class="productodescripcion"> <B>SOBRE DE CARTAS</B> <br><br> (SOBRE DE CARTAS <br>MAULLIDO TROPICAL )</p>
   <button class="botonCopiarSINSTOCK" >NO DISPONIBLE</button>
 </div>
 
 <div class="compra">
-  <div class="imagenproducto" style="background-image: url(./assets/PEINE_bigote_falso.webp);">  </div>
-  <p class="productodescripcion"> <B>PEINE PARA BIGOTE</B> <br><br> (UN PEINE PARA UN BIGOTE FALSO)</p>
+  <div class="imagenproducto" style="background-image: url(./assets/caja_box_elite.webp);">  </div>
+  <p class="productodescripcion"> <B>CAJA ELITE</B> <br><br> (CAJA <br> MICHI-BOX)</p>
   <button class="botonCopiarSINSTOCK" >NO DISPONIBLE</button>
 </div>
 
-
+<div class="compra">
+  <div class="imagenproducto" style="background-image: url(./assets/caja_box_elite_02.webp);">  </div>
+  <p class="productodescripcion"> <B>CAJA ELITE</B> <br><br> (CAJA <br> MAULLIDO TROPICAL)</p>
+  <button class="botonCopiarSINSTOCK" >NO DISPONIBLE</button>
+</div>
 
 
 </div>
