--- a/regalos.html
+++ b/regalos.html
@@ -30,19 +30,19 @@
 <div class="compra">
   <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 01.webp);">  </div>
   <p class="productodescripcion"> <B>TICKET</B> <br><br> (CANJEA 1 CARTA <br> DE MICHI-BOX)</p>
-  <button class="botonCopiar" data-codigo="020AMB0562HGHYUD5">1 TICKET GRATIS</button>
+  <button class="botonCopiar" data-codigo="020AMB0562HGHYUD5">1 TICKET <br> GRATIS</button>
 </div>
 
 <div class="compra">
   <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 02_mt.webp);">  </div>
-  <p class="productodescripcion"> <B>TICKET</B> <br><br> (CANJEA 1 CARTA DE MAULLIDO TROPICAL)</p>
-  <button class="botonCopiar" data-codigo="0550MBMTHU888555TH">1 TICKET GRATIS</button>
+  <p class="productodescripcion"> <B>TICKET</B> <br><br> (CANJEA 1 CARTA DE <br> MAULLIDO TROPICAL)</p>
+  <button class="botonCopiar" data-codigo="0550MBMTHU888555TH">1 TICKET <br> GRATIS</button>
 </div>
 
 <div class="compra">
   <div class="imagenproducto" style="background-image: url(./assets/TICKET_dorado.webp);">  </div>
-  <p class="productodescripcion"> <B>TICKET DORADO</B> <br><br> (CANJEA 1 CARTA LEGENDARIA)</p>
-  <button class="botonCopiar" data-codigo="036SUPERHEROESMICHIBOXSECRET">1 TICKET GRATIS</button>
+  <p class="productodescripcion"> <B>TICKET DORADO</B> <br><br> (CANJEA 1 CARTA <br> LEGENDARIA)</p>
+  <button class="botonCopiar" data-codigo="036SUPERHEROESMICHIBOXSECRET">1 TICKET <br> GRATIS</button>
 </div>
 
 <div class="compra">
