--- a/galeria.html
+++ b/galeria.html
@@ -1026,7 +1026,7 @@
               background-size: 1236px 450px;
           "></div>
                 <img loading="lazy" class="sombra" src="assets/cartas/RARAS/022/022papel.webp"  />
-                <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/22/022_QR.webp);"> </div> 
+                <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/022/022_QR.webp);"> </div> 
 
             </div>
           </div>
@@ -1122,7 +1122,7 @@
                         <!--------------------------------027---------------------------------------------> 
        
         <div class="carousel-item Craro" id="carousel-item-27">
-                        <p class="textorareza"> MICHI ROBOT <br> ● MICHI-BOX ●</p>
+                        <p class="textorareza"> MICHI LASER <br> ● MICHI-BOX ●</p>
                         <P class="textorareza PRARO" >RARA </P>
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4 circle2">
@@ -1134,7 +1134,7 @@
                 animation: animacion 0.3s steps(4) forwards infinite;
                 background-size: 1236px 450px;
             "></div>
-                <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/027_QR.webp);"> </div> 
+                <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/027/027_QR.webp);"> </div> 
 
             </div>
           </div>
