--- a/noticias.html
+++ b/noticias.html
@@ -22,6 +22,9 @@
 
 
       <div class="contenedorQUEESyNOTICIAS">
+
+    <div class="separacion"></div>
+
         <DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_005.webp);"></DIV>
 <p> Como muestra de agradecimiento por el apoyo brindado a este proyecto, recibirán 3 tickets de regalo que podrán canjearse en la tienda de la app. <br> Recibirán dos tickets para canjear por cartas <b>RARAS</b> y un ticket dorado para canjear por una carta <b>LEGENDARIA</b>. <br> Todas de su correspondiente expansión. <BR></BR> MUCHAS GRACIAS</p>
 
