--- a/quees.html
+++ b/quees.html
@@ -22,6 +22,8 @@
 
       <div class="contenedorQUEESyNOTICIAS">
 
+            <div class="separacion"></div>
+
                 <DIV class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/logoprograma03.webp);"></DIV>
 <p>
 <b>BIENVENIDO AL INCOHERENTE <br> MUNDO DE MICHI-BOX</b> <br><br>
