--- a/regalos.html
+++ b/regalos.html
@@ -20,9 +20,14 @@
   <body class="queesbackground">
     <main>
 
-      <div class="contenedorQUEESyNOTICIAS">
-         <DIV class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/BANNER_TIENDA.webp);"></DIV>
 
+
+
+      <div class="contenedorQUEESyNOTICIAS">
+
+            <div class="separacion"></div>
+        
+         <DIV class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/BANNER_TIENDA.webp);"></DIV>
 
 
 <div class="opcionesdecompra">
