--- a/galeria.html
+++ b/galeria.html
@@ -47,8 +47,8 @@
 
       <!-- Botón de Código -->
       <div id="CANJEARCODIGO" class="BOTONDESBLOQUEAR">
-        <input type="text" id="codigoGlobal" placeholder="INGRESAR CÓDIGO" autocomplete="off" />
-        <button id="botonVerificarCodigo">🔓</button>
+        <input type="text" id="codigoGlobal"  autocomplete="off" />
+        <button id="botonVerificarCodigo"></button>
       </div>
 
 <!------------------------------------------------------------->
@@ -56,8 +56,8 @@
 
       <div id="GALERIA" class="carousel-container">
 <!-----------------------------------------------EXPANSION 001(MICHIBOX)------------------------------------------------------------------->
-
-<div id="MICHIBOX001" data-expansion="1" class="cartasgaleriacontainer">
+      <div class="contenedorQUEESyNOTICIAS"> 
+         <div id="MICHIBOX001" data-expansion="1" class="cartasgaleriacontainer">
   
     <div class="separacion"></div>
 
@@ -224,7 +224,8 @@
 
   </div>
   <div class="separacion"></div>
-</div>
+        </div>
+
 <!--------------------------------------------------------------------------------------------------------------------------------------->
 
 <!-----------------------------------------------EXPANSION 002 (MAULLIDO TROPICAL)------------------------------------------------------------------->
@@ -338,6 +339,7 @@
   </div>
   <div class="separacion"></div>
 </div>
+
 <!--------------------------------------------------------------------------------------------------------------------------------------->
 
 <!-----------------------------------------------EXPANSION 003 (INVASIÓN FELINA)------------------------------------------------------------------->
@@ -464,7 +466,7 @@
 </div>-->
 <!--------------------------------------------------------------------------------------------------------------------------------------->
 
-
+    </div>
 
 
         <div class="fondonegro"  >
