--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&display=swap" rel="stylesheet">
   <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#5c1a7e">
   <link rel="icon" type="image/png" href="/assets/icon-192.png">   
 
   <!-- Librerías externas -->
