--- a/quees.html
+++ b/quees.html
@@ -26,14 +26,13 @@
 
                 <DIV class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/logoprograma03.webp);"></DIV>
 <p>
-<b>BIENVENIDO AL INCOHERENTE <br> MUNDO DE MICHI-BOX</b> <br><br>
-En esta divertida colección explorarás las más grandes locuras y contradicciones del universo felino. Sumergite en el mundo de MICHI-BOX a través de historias únicas plasmadas en cartas coleccionables.
-Este juego está pensado para comenzar en el plano físico y continuar colectivamente en el entorno virtual. Invita a jugar, coleccionar y compartir, proponiendo nuevas formas de relación y colaboración. <br>
-Michi-Box ofrece una experiencia lúdica y cooperativa distinta al tradicional álbum de colección. Su objetivo es estimular el trabajo en equipo, la creatividad y el fortalecimiento de los vínculos.
+<b>BIENVENIDO AL MUNDO DE MICHI-BOX</b> <br><br>
+En esta divertida colección explorarás las más grandes locuras del universo felino a través de historias únicas plasmadas en cartas coleccionables.
+Este juego está pensado para comenzar en el plano físico y continuar colectivamente en el entorno virtual. Invita a jugar, coleccionar y compartir, proponiendo nuevas formas de relación. <br>
+Michi-Box ofrece una experiencia lúdica y cooperativa distinta al tradicional álbum de colección. Su objetivo es estimular la creatividad y el fortalecimiento de los vínculos.
 <br>
 Es imposible completar y descubrir MICHI-BOX si lo hacés solo.
-<br>
-¿QUÉ ESPERÁS PARA COLECCIONAR A TODOS LOS GATOS? ¡Salí y hacé amigos!
+
 <br><br><br>
   <b>Idea, Diseño y realización del proyecto:<br> José Ignacio Pyptyk</b>  
 </p>
