--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <a onclick="mostrarQuees()" class="iconomenu lazy-michi" style="background-image: url(./assets/boton_QUE_ES.webp);"></a>
       <a onclick="mostrarNoticias()" class="iconomenu lazy-michi" style="background-image: url(./assets/boton_NOTICIAS.webp);"></a>
       <a onclick="mostrarRegalos()" class="iconomenu lazy-michi" style="background-image: url(./assets/boton_tienda.webp);"></a>
-
+      <a onclick="mostrarDonar()" class="lazy-michi" style="width: 300px; height: 50px; background-image: url(./assets/DONAR_ICON.webp); background-size: contain; background-position: center; background-repeat: no-repeat;"></a>
     </div>
 </div>
 <DIV class="infoandroid" data-lazy="true"></DIV>
@@ -54,7 +54,7 @@
   </button>
 
 
-    <p class="descripcionbanner">MICHI BOX - Juego de gatos coleccionables V2.0.5. Proyectual Digitalización Cat.Gramajo I 2025. diseño y realización: José Ignacio Pyptyk</p>
+    <p class="descripcionbanner">MICHI BOX - Juego de gatos coleccionables V3.0.5. Proyectual Digitalización Cat.Gramajo I 2025. diseño y realización: José Ignacio Pyptyk</p>
   </div>
   <!------------------------------------------------------------------------>
 
@@ -82,6 +82,11 @@
   <!-----------------------------------REGALOS HTML------------------------------------->
     <div id="regalosContainer" >
     <iframe src="regalos.html" style="width: 100%; height: 100%; border: none;"></iframe>
+  </div>
+
+    <!-----------------------------------DONAR HTML------------------------------------->
+    <div id="donarContainer" >
+    <iframe src="donar.html" style="width: 100%; height: 100%; border: none;"></iframe>
   </div>
 
 </main>
