--- a/quees.html
+++ b/quees.html
@@ -26,71 +26,88 @@
 
                 <DIV class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/logoprograma03.webp);"></DIV>
 <p>
-<b>BIENVENIDO AL MUNDO DE MICHI-BOX</b> <br><br>
+<b>BIENVENIDO AL MUNDO <br> DE MICHI-BOX</b> <br><br>
 En esta divertida colección explorarás las más grandes locuras del universo felino a través de historias únicas plasmadas en cartas coleccionables.
 Este juego está pensado para comenzar en el plano físico y continuar colectivamente en el entorno virtual. Invita a jugar, coleccionar y compartir, proponiendo nuevas formas de relación. <br>
 Michi-Box ofrece una experiencia lúdica y cooperativa distinta al tradicional álbum de colección. Su objetivo es estimular la creatividad y el fortalecimiento de los vínculos.
 <br>
 Es imposible completar y descubrir MICHI-BOX si lo hacés solo.
-
 <br><br><br>
-  <b>Idea, Diseño y realización del proyecto:<br> José Ignacio Pyptyk</b>  
+<b>Idea, diseño y realización del proyecto:<br> José Ignacio Pyptyk</b>  
 </p>
-      <div class="separacion"></div>
 
-                <DIV class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/BANNER_QUEES_MECANICA.webp);"></DIV>
+<div class="separacion"></div>
+
+<div class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/BANNER_QUEES_MECANICA.webp);"></div>
+
 <p>  
-  El proyecto está pensado para iniciar en lo físico y continuar colectivamente en el ámbito virtual. No puedes conseguir todas las cartas si solo te quedas coleccionando cartas físicas. <br> 
-  Los sobres físicos solo traen cartas de rareza NORMAL y, escasamente, alguna de rareza RARA. <br> 
-  la forma más sencilla de conseguir cartas RARAS es recibirlas de otros usuarios a travéz de la galería de cartas de la APP.
-  La app de MICHI-BOX funciona como una galería interactiva para poder coleccionar todas tus cartas y descubriri todos sus secretos.  
+El proyecto está pensado para iniciar en lo físico y continuar colectivamente en el ámbito virtual. No podés conseguir todas las cartas si solo te quedás coleccionando cartas físicas. <br> 
+Los sobres físicos solo traen cartas de rareza NORMAL y, en raras ocasiones, alguna de rareza RARA. <br> 
+La forma más sencilla de conseguir cartas RARAS es recibirlas de otros usuarios a través de la galería de cartas de la app.
+La app de MICHI-BOX funciona como una galería interactiva para coleccionar todas tus cartas y descubrir todos sus secretos.  
 </p>
 
-                <DIV class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/BANNER_QUEES_TIPOS_DE_CARTAS.webp);"></DIV>
+<div class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/BANNER_QUEES_TIPOS_DE_CARTAS.webp);"></div>
+
 <p> 
-  Puedes conseguir tres tipos de cartas: <br><br> 
-  <b>● Cartas NORMALES ● <br> ● Cartas RARAS ● <br> ● Cartas LEGENDARIAS ●</b>  
-  <br><br> 
-  Cada una con sus características. <br> 
-  Las cartas NORMALES se consiguen a través de aperturas de sobres físicos, al igual que las cartas RARAS, solo que estas con menor frecuencia. Algunas cartas RARAS solo se pueden conseguir en ediciones especiales de la marca o se obtienen como premio. <br> 
-  Las cartas LEGENDARIAS, a diferencia de las demás, solo existen en la virtualidad y se pueden conseguir si se cumplen determinadas condiciones o realizamos cierta acción, como lograr un número específico de intercambios o coleccionando cierta cantidad de cartas.  
-<BR></BR>
-Puedes identificar la rareza de las cartas por su estilo de marco.
+Podés conseguir tres tipos de cartas: <br><br> 
+<b>● Cartas NORMALES ● <br> ● Cartas RARAS ● <br> ● Cartas LEGENDARIAS ●</b>  
+<br><br> 
+Cada una tiene sus propias características. <br> 
+Las cartas NORMALES se consiguen a través de aperturas de sobres físicos, al igual que las cartas RARAS, solo que estas con menor frecuencia. Algunas cartas RARAS solo se pueden conseguir en ediciones especiales de la marca o se obtienen como premio. <br> 
+Las cartas LEGENDARIAS, a diferencia de las demás, solo existen en la virtualidad y se pueden conseguir si se cumplen determinadas condiciones o se realiza cierta acción, como lograr un número específico de intercambios o coleccionar una cantidad determinada de cartas.  
+<br><br>
+Podés identificar la rareza de las cartas por su estilo de marco.
 </p>
-                <DIV class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/BANNER_QUEES_TIPOS_DE_CARTAS_MARCOS.webp);"></DIV>
+
+<div class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/BANNER_QUEES_TIPOS_DE_CARTAS_MARCOS.webp);"></div>
+
 <p> 
- <b>● CARTAS NORMALES ●</b>
+<b>● CARTAS NORMALES ●</b>
 <br>Marco de papel cuadriculado.
-<br></br>Las cartas normales son básicas y no tienen ninguna rareza holográfica ni animación, pero funcionan como llave para conseguir otras cartas más raras.
+<br><br>Las cartas normales son básicas y no tienen ninguna rareza holográfica ni animación, pero funcionan como llave para conseguir otras cartas más raras.
 Estas cartas no se pueden intercambiar con otros jugadores de manera digital; tendrás que hacerlo en la vida real.
-<br></br><br></br>
+<br><br><br>
 
 <b>● CARTAS RARAS ●</b>
 <br>Marco de papel de colores.
-<br></br>Las cartas raras son infrecuentes en los sobres físicos, así que si querés conseguirlas todas, deberás intercambiarlas con otras personas que las tengan, tanto en formato físico como digital.
+<br><br>Las cartas raras son infrecuentes en los sobres físicos, así que si querés conseguirlas todas, deberás intercambiarlas con otras personas que las tengan, tanto en formato físico como digital.
 Estas cartas, al desbloquearlas en la app, te darán acceso a animaciones y efectos únicos.
-<br></br><br></br>
+<br><br><br>
 
 <b>● CARTAS LEGENDARIAS ●</b>
 <br>Marco de papel dorado.
-<br></br>Estas son las cartas más difíciles de conseguir, y su rareza se debe a que son el premio por haber completado alguna misión, acción o simplemente por coleccionar un número determinado de gatos.
+<br><br>Estas son las cartas más difíciles de conseguir, y su rareza se debe a que son el premio por haber completado alguna misión, acción o simplemente por coleccionar un número determinado de gatos.
 Al ser únicas, no se pueden compartir de ninguna forma.
 <br><br>
-Puedes conocer los requisitos de obtención de las cartas tocando en su signo  <b> "?" </b> correspondiente. 
+Podés conocer los requisitos de obtención de las cartas tocando su signo <b>"?"</b> correspondiente. 
 <br><br>
-<DIV class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/BANNER_QUEES_TIPOS_DE_CARTAS_legendarias_requisitos.webp);"></DIV>
 
+<div class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/BANNER_QUEES_TIPOS_DE_CARTAS_legendarias_requisitos.webp);"></div>
 
-                <DIV class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/BANNER_QUEES_compartir.webp);"></DIV>
-<p> Las únicas cartas que podés compartir a través de un código QR son las cartas de rareza RARA. Podés compartirlas y recibirlas. <br> Al haber muy pocas de estas cartas físicas, los jugadores están obligados a compartirlas para poder completar la colección. </p>
-      <div class="separacion"></div>
+<div class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/BANNER_QUEES_compartir.webp);"></div>
 
-<DIV class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/BANNER_QUEES_expansiones.webp);"></DIV>
-<p> Podés navegar por las diferentes expansiones en la galería de la app a través del botón “Expansiones”. Si desbloqueás una carta de otra expansión distinta a la que actualmente figura en tu galería, esta se actualiza automáticamente y te redirige a su respectiva expansión, facilitando la navegación del usuario. </p>
-     
-<DIV class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/BANNER_QUEES_expansiones_icono.webp);"></DIV>
-<p> Las cartas físicas vienen con una estampilla que identifica a qué expansión corresponden. Si no tiene estampilla, significa que pertenece a la colección base de MICHI-BOX. </p>     
-      <div class="separacion"></div>
+<p> 
+Las únicas cartas que podés compartir a través de un código QR son las cartas de rareza RARA. Podés compartirlas y recibirlas. <br> 
+Al haber muy pocas de estas cartas físicas, los jugadores están obligados a compartirlas para poder completar la colección. 
+</p>
+
+<div class="separacion"></div>
+
+<div class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/BANNER_QUEES_expansiones.webp);"></div>
+
+<p> 
+Podés navegar por las diferentes expansiones en la galería de la app a través del botón “Expansiones”. Si desbloqueás una carta de otra expansión distinta a la que actualmente figura en tu galería, esta se actualiza automáticamente y te redirige a su respectiva expansión, facilitando la navegación del usuario. 
+</p>
+
+<div class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/BANNER_QUEES_expansiones_icono.webp);"></div>
+
+<p> 
+Las cartas físicas vienen con una estampilla que identifica a qué expansión corresponden. Si no tienen estampilla, significa que pertenecen a la colección base de MICHI-BOX. 
+</p>     
+
+<div class="separacion"></div>
+
 
 </div>
 
