--- a/donar.html
+++ b/donar.html
@@ -34,7 +34,7 @@
 
 <div class="botondonarcontainer">
 
-   <a class="botondonar" href="http://link.mercadopago.com.ar/michibox">DONAR</a>
+   <a class="botondonar" href="http://link.mercadopago.com.ar/michibox"  target="_blank" rel="noopener noreferrer">DONAR</a>
 
 </div>
 
