--- a/noticias.html
+++ b/noticias.html
@@ -24,6 +24,12 @@
       <div class="contenedorQUEESyNOTICIAS">
 
     <div class="separacion"></div>
+            <DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_006.webp);"></DIV>
+<p> <b>● Actualización V4.0.1. </b> <BR></BR> Los rasguños han abierto una grieta en el espacio-tiempo, desatando fusiones incoherentes y caóticas. <br>
+Explorá los nuevos portales interdimensionales y descubrí michis nunca antes vistos. <BR></BR>
+Esta expansión incorpora la nueva categoría: <br> <b> ● OBJETO DIMENSIONAL ●</b> <br></br> y presenta cartas exclusivas de rareza: <br> <b>● DIMENSIONAL ●</b> <br></br><br></br> Nuevos sobres físicos y cartas digitales <br> ●RASGUÑO DIMENSIONAL● <br> ¡YA DISPONIBLE!</p>
+
+
 
         <DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_005.webp);"></DIV>
 <p> Como muestra de agradecimiento por el apoyo brindado a este proyecto, recibirán 3 tickets de regalo que podrán canjearse en la tienda de la app. <br> Recibirán dos tickets para canjear por cartas <b>RARAS</b> y un ticket dorado para canjear por una carta <b>LEGENDARIA</b>. <br> Todas de su correspondiente expansión. <BR></BR> MUCHAS GRACIAS</p>
