--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
   <div class="contenedor">
     <div class="logo lazy-michi">
       <DIV class="IMAGENLOGOBANNER lazy-michi"></DIV>
-    </div>
+<a href="https://www.instagram.com/michibox_game?igsh=MWNreXdzczB6OXU4dQ==" 
+   class="botoninstagram" 
+   target="_blank" 
+   rel="noopener noreferrer">
+</a>    </div>
 <div class="CONTENEDORESBOTONESMENU">
       <div class="botonesmenu">
       <a onclick="mostrarGaleria()" class="iconomenu lazy-michi" style="background-image: url(./assets/galeriacartasicon.webp);"></a>
