--- a/galeria.html
+++ b/galeria.html
@@ -345,7 +345,7 @@
 <!--------------------------------------------------------------------------------------------------------------------------------------->
 
 
-<!-----------------------------------------------EXPANSION 003 (RASGUÑO DIMENSIONAL)------------------------------------------------------------------->
+<!-----------------------------------------------EXPANSION 003 (RASGUÑO DIMENSIONAL)------------------------------------------------------------------
 
 <div id="MICHIBOX003" data-expansion="3" class="cartasgaleriacontainer">
     <div class="separacion"></div>
@@ -419,7 +419,6 @@
 
 
 
-<!------------------------------------------------------------------STICKERS OBJETOS--------------------------------------------------------------------->
 <div class="contenedorcolores" >
 
     <div class="carta-wrapper" data-pass="ROJO005846">
@@ -476,7 +475,6 @@
 
 
 
-<!------------------------------------------------------------------CARTAS DIMENSIONALES (FUSIONES)--------------------------------------------------------------------->
 
   <div class="contenedorcolores">
     <div class="carta-wrapper" data-pass="HYU02458JU6">
@@ -532,7 +530,6 @@
   </div>
 
 
-<!------------------------------------------------------------------LEGENDARIAS--------------------------------------------------------------------->
 
     <div class="contenedorcolores">
 
@@ -552,7 +549,7 @@
 
   </div>
 
-  </div>
+  </div>-->
 
 <!-----------------------------------------------EXPANSION 004 (CRAYONES)-----------------------------------------------------------------
 
@@ -767,7 +764,38 @@
 
   <div  class="separacion"></div>
 </div>
+
+
+
+
+
+
+<!--------------------------------------------------------EXPANSION FESTIVA ------------------------------------------------------------------------------->
+
+
+         <div id="MICHIBOX099" data-expansion="99" class="cartasgaleriacontainer">
+  
+    <div class="separacion"></div>
+
+  <div class="expansion"  style="background-image: url(./assets/expansion_FESTIVIDAD_icon.webp);"></div>
+
+
+
+  <div class="contenedorcolores" >
+
+    <div class="carta-wrapper" data-pass="NAVIDAD2025MICHIVSARBOL">
+      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/NAVIDAD_2025.webp);" data-target="carousel-item-202025"></button>
+      <div class="overlay-bloqueo overraro"></div>
+    </div>
+
+
+  </div>
 <!--------------------------------------------------------------------------------------------------------------------------------------->
+
+
+  <div class="separacion"></div>
+        </div>
+
 
     </div>
 
@@ -2040,8 +2068,30 @@
 </div>
 
 
+
+
+
+
+
+
+
+        <!-------------------------------------------------------------CARTAS FESTIVIDADES-------------------------------------------------------------->
+
+<!-------------------------------------NAVIDAD_2025---------------------------------------->  
+         <div class="carousel-item Craro" id="carousel-item-202025" >
+                                  <p class="textorareza">● CARTA FESTIVA ● <br> Arte: @ignpk_arte</p>
+                        <P class="textorareza PRARO" > NAVIDAD 2025 </P>
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4 circle1">
+                    <div class="michi" style="background-color: rgb(88, 72, 2);"></div>
+              <img loading="lazy" class="medio" src="assets/cartas/FESTIVIDAD/NAVIDAD_2025.webp" style="z-index: 10;" />
+                            <div class="lineascolores" style="filter: grayscale(1) sepia(1) saturate(2); z-index: 2; transform: rotate(-45deg) scale(1.75);"></div>  
+
+            </div>
+          </div>
+        </div>
+
 <!-----------------------------------------------------------------------------> 
-      </div>
 <!-----------------------------------------------------------------------------> 
 
 <DIV class="contenedorbotoncerrar">
@@ -2073,10 +2123,15 @@
    class="carruseldeexpansiones-item lazy-michi" 
    style="background-image: url(./assets/expansion002B_sobre.webp);">  </a>
 
-
+<!--
    <a href="#MICHIBOX003"  onclick="cerrarVentanaExpansiones(); mostrarExpansion('3')" 
    class="carruseldeexpansiones-item lazy-michi" 
    style="background-image: url(./assets/expansion003_sobre.webp);">  </a>
+-->
+
+      <a href="#MICHIBOX099"  onclick="cerrarVentanaExpansiones(); mostrarExpansion('99')" 
+   class="carruseldeexpansiones-item lazy-michi" 
+   style="background-image: url(./assets/expansion099_sobre_festividad.webp);"> <img class="ticketssobrefestivo" src="./assets/expansion099_sobre_festividad_B.webp" style="width: 100%; height: 100%;"> </a>
 
 
    <div 
