--- a/regalos.html
+++ b/regalos.html
@@ -32,6 +32,12 @@
 
 <div class="opcionesdecompra">
 
+  <div class="compra">
+  <div class="imagenproducto" style="background-image: url(./assets/TICKET_dorado.webp);">  </div>
+  <p class="productodescripcion"> <B>TICKET DORADO</B> <br><br> (CANJEA 1 CARTA <br> FESTIVA)</p>
+  <button class="botonCopiar" data-codigo="NAVIDAD2025MICHIVSARBOL">1 TICKET <br> GRATIS</button>
+</div>
+
 <div class="compra">
   <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 01.webp);">  </div>
   <p class="productodescripcion"> <B>TICKET</B> <br><br> (CANJEA 1 CARTA <br> DE MICHI-BOX)</p>
@@ -44,11 +50,7 @@
   <button class="botonCopiar" data-codigo="0550MBMTHU888555TH">1 TICKET <br> GRATIS</button>
 </div>
 
-<div class="compra">
-  <div class="imagenproducto" style="background-image: url(./assets/TICKET_dorado.webp);">  </div>
-  <p class="productodescripcion"> <B>TICKET DORADO</B> <br><br> (CANJEA 1 CARTA <br> LEGENDARIA)</p>
-  <button class="botonCopiar" data-codigo="036SUPERHEROESMICHIBOXSECRET">1 TICKET <br> GRATIS</button>
-</div>
+
 
 <div class="compra">
   <div class="imagenproducto" style="background-image: url(./assets/caja_box_elite_03.webp);">  </div>
