--- a/noticias.html
+++ b/noticias.html
@@ -24,15 +24,32 @@
       <div class="contenedorQUEESyNOTICIAS">
 
     <div class="separacion"></div>
-            <DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_006.webp);"></DIV>
+        <!--  <DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_006.webp);"></DIV>
 <p> <b>● Actualización V4.0.1. </b> <BR></BR> Los rasguños han abierto una grieta en el espacio-tiempo, desatando fusiones incoherentes y caóticas. <br>
 Explorá los nuevos portales interdimensionales y descubrí michis nunca antes vistos. <BR></BR>
 Esta expansión incorpora la nueva categoría: <br> <b> ● OBJETO DIMENSIONAL ●</b> <br></br> y presenta cartas exclusivas de rareza: <br> <b>● DIMENSIONAL ●</b> <br></br><br></br> Nuevos sobres físicos y cartas digitales <br> ●RASGUÑO DIMENSIONAL● <br> ¡YA DISPONIBLE!</p>
+-->  
 
+        <DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_007.webp);"></DIV>
+<p> Llegaron los sobres digitales FESTIVOS. <br> 
+cada fecha destacada vendrá acompañada de un regalo: <br> 
+Un <b>TICKET DORADO GRATIS</b> <br> 
+que se podrá utilizar para canjear por una tarjeta festiva. 
+Estos tickets solo estarán disponibles durante un tiempo limitado, luego desaparecerán para siempre. <br> 
+cada tarjeta es <b>ÚNICA</b> con un arte exclusivo que no se podrá reclamar de ninguna otra forma. 
+<BR></BR> 
+Encuentra la colección de cartas festivas en la solapa EXPANSIONES de la galeria.
+<BR></BR> 
+ <B>¡PUEDES RECLAMAR TU TICKET DORADO GRATIS EN LA TIENDA!</B>
+<BR></BR> 
+FELIZ NAVIDAD Y <br> 
+PRÓSPERO AÑO NUEVO 
+</p>
+    <div class="separacion"></div>
 
 
         <DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_005.webp);"></DIV>
-<p> Como muestra de agradecimiento por el apoyo brindado a este proyecto, recibirán 3 tickets de regalo que podrán canjearse en la tienda de la app. <br> Recibirán dos tickets para canjear por cartas <b>RARAS</b> y un ticket dorado para canjear por una carta <b>LEGENDARIA</b>. <br> Todas de su correspondiente expansión. <BR></BR> MUCHAS GRACIAS</p>
+<p> Como muestra de agradecimiento por el apoyo brindado a este proyecto, recibirán 3 tickets de regalo que podrán canjearse en la tienda de la app. <br> Recibirán dos tickets para canjear por cartas <b>RARAS</b> y un ticket dorado para canjear por una carta <b>FESTIVA</b>. <br> Todas de su correspondiente expansión. <BR></BR> MUCHAS GRACIAS</p>
 
 <DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_004.webp);"></DIV>
 <p> <b>● Actualización V2.0.5. </b> <BR></BR> El verano llega con nuevos felinos exóticos y cajas llenas de frescura en esta expansión que nadie pidió, pero todos necesitaban: Maullido Tropical. <BR></BR> Más gatos, más cajas y, por supuesto… ¡más incoherencias! </p>
