--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="botonesmenu">
       <a onclick="mostrarGaleria()" class="iconomenu lazy-michi" style="background-image: url(./assets/galeriacartasicon.webp);"></a>
       <a onclick="mostrarQuees()" class="iconomenu lazy-michi" style="background-image: url(./assets/boton_QUE_ES.webp);"></a>
-      <a onclick="mostrarNoticias()" class="iconomenu lazy-michi" style="background-image: url(./assets/boton_NOTICIAS.webp);"></a>
+      <a onclick="mostrarNoticias()" class="iconomenu lazy-michi" style="background-image: url(./assets/boton_NOTICIAS_NUEVO.webp);"></a>
       <a onclick="mostrarRegalos()" class="iconomenu lazy-michi" style="background-image: url(./assets/boton_tienda.webp);"></a>
       <a onclick="mostrarDonar()" class="lazy-michi botondonarmenu" style="width: 300px; height: 50px; background-image: url(./assets/DONAR_ICON.webp); background-size: contain; background-position: center; background-repeat: no-repeat;"></a>
     </div>
