--- a/galeria.html
+++ b/galeria.html
@@ -2122,7 +2122,7 @@
 
       <a href="#MICHIBOX099"  onclick="cerrarVentanaExpansiones(); mostrarExpansion('99')" 
    class="carruseldeexpansiones-item lazy-michi" 
-   style="background-image: url(./assets/expansion099_sobre_festividad.webp);"> <img class="ticketssobrefestivo" src="./assets/expansion099_sobre_festividad_B.webp" style="width: 100%; height: 100%;"> </a>
+   style="background-image: url(./assets/expansion099_sobre_festividad.webp);"> </a>
 
 
    <div 
