--- a/regalos.html
+++ b/regalos.html
@@ -38,6 +38,12 @@
   <button class="botonCopiar" data-codigo="NAVIDAD2025MICHIVSARBOL">1 TICKET <br> GRATIS</button>
 </div>
 
+  <div class="compra">
+  <div class="imagenproducto" style="background-image: url(./assets/TICKET_dorado.webp);">  </div>
+  <p class="productodescripcion"> <B>TICKET DORADO</B> <br><br> (CANJEA 1 CARTA <br> FESTIVA)</p>
+  <button class="botonCopiar" data-codigo="AÑONUEVO20252026">1 TICKET <br> GRATIS</button>
+</div>
+
 <div class="compra">
   <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 01.webp);">  </div>
   <p class="productodescripcion"> <B>TICKET</B> <br><br> (CANJEA 1 CARTA <br> DE MICHI-BOX)</p>
