--- a/galeria.html
+++ b/galeria.html
@@ -774,14 +774,19 @@
   <div id="MICHIBOX099" data-expansion="99" class="cartasgaleriacontainer">
     <div class="separacion"></div>
     <div class="expansion"  style="background-image: url(./assets/expansion_FESTIVIDAD_icon.webp);"></div>
-    
     <div class="contenedorcolores" >
+
       <div class="carta-wrapper" data-pass="NAVIDAD2025MICHIVSARBOL">
         <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/25122025.webp);" data-target="carousel-item-202025"></button>
         <div class="overlay-bloqueo overraro"></div>
       </div>
-    </div>
 
+            <div class="carta-wrapper" data-pass="AÑONUEVO20252026">
+        <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/31122025.webp);" data-target="carousel-item-31122025"></button>
+        <div class="overlay-bloqueo overraro"></div>
+      </div>
+
+    </div>
     <div class="separacion"></div>
   </div>
 
@@ -2069,9 +2074,9 @@
         <!-------------------------------------------------------------CARTAS FESTIVIDADES-------------------------------------------------------------->
 
 <!-------------------------------------NAVIDAD_2025---------------------------------------->  
-         <div class="carousel-item Craro" id="carousel-item-202025" >
+         <div class="carousel-item Cfestivo" id="carousel-item-202025" >
                                   <p class="textorareza">● CARTA FESTIVA ● <br> Arte: @ignpk_arte</p>
-                        <P class="textorareza PRARO" > NAVIDAD 2025 </P>
+                        <P class="textorareza PFESTIVO" > NAVIDAD 2025 </P>
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4 circle1">
                     <div class="michi" style="background-color: rgb(88, 72, 2);"></div>
@@ -2082,7 +2087,19 @@
           </div>
         </div>
 
-<!-----------------------------------------------------------------------------> 
+<!-----------------------------------------AÑO NUEVO 2025------------------------------------> 
+         <div class="carousel-item Cfestivo" id="carousel-item-31122025" >
+                                  <p class="textorareza">● CARTA FESTIVA ● <br> Arte: @ignpk_arte</p>
+                        <P class="textorareza PFESTIVO" > AÑO NUEVO 2026 </P>
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4 circle1">
+                    <div class="michi" style="background-color: rgb(79, 79, 79);"></div>
+              <img loading="lazy" class="medio" src="assets/cartas/FESTIVIDAD/año_nuevo_2025.webp" style="z-index: 10;" />
+                            <div class="lineascolores" style="z-index: 2; transform: rotate(-45deg) scale(1.75);"></div>  
+
+            </div>
+          </div>
+        </div>
 <!-----------------------------------------------------------------------------> 
 
 <DIV class="contenedorbotoncerrar">
