--- a/regalos.html
+++ b/regalos.html
@@ -24,69 +24,34 @@
 
 
       <div class="contenedorQUEESyNOTICIAS">
-
-            <div class="separacion"></div>
+    <div class="separacion"></div>
+            <div class="separacion" data-lazy="true" style="background-image: url(./assets/BANNER_TIENDA_REGALOS.webp); background-size: contain; background-repeat: no-repeat; background-position: center;"></div>
         
-         <DIV class="imagenbannernoticia" data-lazy="true" style="background-image: url(./assets/BANNER_TIENDA.webp);"></DIV>
 
 
 <div class="opcionesdecompra">
 
-  <div class="compra">
-  <div class="imagenproducto" style="background-image: url(./assets/TICKET_dorado.webp);">  </div>
-  <p class="productodescripcion"> <B>TICKET DORADO</B> <br><br> (CANJEA 1 CARTA <br> FESTIVA)</p>
-  <button class="botonCopiar" data-codigo="NAVIDAD2025MICHIVSARBOL">1 TICKET <br> GRATIS</button>
-</div>
 
   <div class="compra">
-  <div class="imagenproducto" style="background-image: url(./assets/TICKET_dorado.webp);">  </div>
-  <p class="productodescripcion"> <B>TICKET DORADO</B> <br><br> (CANJEA 1 CARTA <br> FESTIVA)</p>
-  <button class="botonCopiar" data-codigo="AÑONUEVO20252026">1 TICKET <br> GRATIS</button>
+  <div class="imagenproducto" style="background-image: url(./assets/TICKET_dorado_paquete.webp);">  </div>
+  <button class="botonCopiar" data-codigo="NAVIDD2025MICHIVSARBOL">1 CARTA FESTIVA <br> NAVIDAD 2025<br> GRATIS</button>
+</div>
+
+  <div class="compra">
+  <div class="imagenproducto" style="background-image: url(./assets/TICKET_dorado_paquete.webp);">  </div>
+  <button class="botonCopiar" data-codigo="AÑONUEV20252026">1 CARTA FESTIVA <br> AÑO NUEVO 2026<br> GRATIS</button>
 </div>
 
 <div class="compra">
-  <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 01.webp);">  </div>
-  <p class="productodescripcion"> <B>TICKET</B> <br><br> (CANJEA 1 CARTA <br> DE MICHI-BOX)</p>
-  <button class="botonCopiar" data-codigo="020AMB0562HGHYUD5">1 TICKET <br> GRATIS</button>
+  <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 01_paquete.webp);">  </div>
+  <button class="botonCopiar" data-codigo="020AMB562HGHYUD5">1 CARTA <br> MICHI BOX <br> GRATIS</button>
 </div>
 
 <div class="compra">
-  <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 02_mt.webp);">  </div>
-  <p class="productodescripcion"> <B>TICKET</B> <br><br> (CANJEA 1 CARTA DE <br> MAULLIDO TROPICAL)</p>
-  <button class="botonCopiar" data-codigo="0550MBMTHU888555TH">1 TICKET <br> GRATIS</button>
+  <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 02_mt_paquete.webp);">  </div>
+  <button class="botonCopiar" data-codigo="0550MBMTU888555TH">1 CARTA <br> MAULLIDO TROPICAL <br> GRATIS</button>
 </div>
 
-
-
-<div class="compra">
-  <div class="imagenproducto" style="background-image: url(./assets/caja_box_elite_03.webp);">  </div>
-  <p class="productodescripcion"> <B>CAJA PREMIUM</B> <br><br> (CAJA MICHI-BOX <br> ELITE-PREMIUM)</p>
-  <button class="botonCopiarSINSTOCK" >NO DISPONIBLE</button>
-</div>
-
-<div class="compra">
-  <div class="imagenproducto" style="background-image: url(./assets/SOBRE_COMPRA_01.webp);">  </div>
-  <p class="productodescripcion"> <B>SOBRE DE CARTAS</B> <br><br> (SOBRE DE CARTAS <br>MICHI-BOX )</p>
-  <button class="botonCopiarSINSTOCK" >NO DISPONIBLE</button>
-</div>
-
-<div class="compra">
-  <div class="imagenproducto" style="background-image: url(./assets/SOBRE_COMPRA_02.webp);">  </div>
-  <p class="productodescripcion"> <B>SOBRE DE CARTAS</B> <br><br> (SOBRE DE CARTAS <br>MAULLIDO TROPICAL )</p>
-  <button class="botonCopiarSINSTOCK" >NO DISPONIBLE</button>
-</div>
-
-<div class="compra">
-  <div class="imagenproducto" style="background-image: url(./assets/caja_box_elite.webp);">  </div>
-  <p class="productodescripcion"> <B>CAJA ELITE</B> <br><br> (CAJA <br> MICHI-BOX)</p>
-  <button class="botonCopiarSINSTOCK" >NO DISPONIBLE</button>
-</div>
-
-<div class="compra">
-  <div class="imagenproducto" style="background-image: url(./assets/caja_box_elite_02.webp);">  </div>
-  <p class="productodescripcion"> <B>CAJA ELITE</B> <br><br> (CAJA <br> MAULLIDO TROPICAL)</p>
-  <button class="botonCopiarSINSTOCK" >NO DISPONIBLE</button>
-</div>
 
 
 </div>
