--- a/index.html
+++ b/index.html
@@ -36,17 +36,27 @@
   <div class="contenedor">
     <div class="logo lazy-michi">
       <DIV class="IMAGENLOGOBANNER lazy-michi"></DIV>
-<a href="https://www.instagram.com/michibox_game?igsh=MWNreXdzczB6OXU4dQ==" 
+
+      <div class="botonesredes">
+        <a href="https://www.instagram.com/michibox_game?igsh=MWNreXdzczB6OXU4dQ==" 
+        style="background-image: url(./assets/logo_instagram.webp);"
    class="botoninstagram" 
    target="_blank" 
    rel="noopener noreferrer">
-</a>    </div>
+</a> 
+<a onclick="mostrarRegalos()"
+        style="background-image: url(./assets/boton_regalos_pequeño.webp);"
+   class="botoninstagram" >
+</a> 
+      </div>
+
+</div>
 <div class="CONTENEDORESBOTONESMENU">
       <div class="botonesmenu">
       <a onclick="mostrarGaleria()" class="iconomenu lazy-michi" style="background-image: url(./assets/galeriacartasicon.webp);"></a>
       <a onclick="mostrarQuees()" class="iconomenu lazy-michi" style="background-image: url(./assets/boton_QUE_ES.webp);"></a>
       <a onclick="mostrarNoticias()" class="iconomenu lazy-michi" style="background-image: url(./assets/boton_NOTICIAS_NUEVO.webp);"></a>
-      <a onclick="mostrarRegalos()" class="iconomenu lazy-michi" style="background-image: url(./assets/boton_regalos.webp);"></a>
+      <a  class="iconomenu lazy-michi" style="background-image: url(./assets/boton_tienda.webp); filter: grayscale(1);"></a>
       <a onclick="mostrarDonar()" class="lazy-michi botondonarmenu" style="width: 300px; height: 50px; background-image: url(./assets/DONAR_ICON.webp); background-size: contain; background-position: center; background-repeat: no-repeat;"></a>
     </div>
 </div>
