--- a/regalos.html
+++ b/regalos.html
@@ -34,22 +34,22 @@
 
   <div class="compra">
   <div class="imagenproducto" style="background-image: url(./assets/TICKET_dorado_paquete.webp);">  </div>
-  <button class="botonCopiar" data-codigo="NAVIDD2025MICHIVSARBOL">1 CARTA FESTIVA <br> NAVIDAD 2025<br> GRATIS</button>
+  <button class="botonCopiar" data-codigo="NAVIDAD2025MICHIVSARBOL">1 CARTA FESTIVA <br> NAVIDAD 2025<br> GRATIS</button>
 </div>
 
   <div class="compra">
   <div class="imagenproducto" style="background-image: url(./assets/TICKET_dorado_paquete.webp);">  </div>
-  <button class="botonCopiar" data-codigo="AÑONUEV20252026">1 CARTA FESTIVA <br> AÑO NUEVO 2026<br> GRATIS</button>
+  <button class="botonCopiar" data-codigo="AÑONUEVO20252026">1 CARTA FESTIVA <br> AÑO NUEVO 2026<br> GRATIS</button>
 </div>
 
 <div class="compra">
   <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 01_paquete.webp);">  </div>
-  <button class="botonCopiar" data-codigo="020AMB562HGHYUD5">1 CARTA <br> MICHI BOX <br> GRATIS</button>
+  <button class="botonCopiar" data-codigo="020AMB0562HGHYUD5">1 CARTA <br> MICHI BOX <br> GRATIS</button>
 </div>
 
 <div class="compra">
   <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 02_mt_paquete.webp);">  </div>
-  <button class="botonCopiar" data-codigo="0550MBMTU888555TH">1 CARTA <br> MAULLIDO TROPICAL <br> GRATIS</button>
+  <button class="botonCopiar" data-codigo="0550MBMTHU888555TH">1 CARTA <br> MAULLIDO TROPICAL <br> GRATIS</button>
 </div>
 
 
