--- a/regalos.html
+++ b/regalos.html
@@ -43,13 +43,18 @@
 </div>
 
 <div class="compra">
-  <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 01_paquete.webp);">  </div>
-  <button class="botonCopiar" data-codigo="020AMB0562HGHYUD5">1 CARTA <br> MICHI BOX <br> GRATIS</button>
+  <div class="imagenproducto" style="background-image: url(./assets/TICKET_dorado.webp);">  </div>
+  <button class="botonCopiar" data-codigo="036SUPERHEROESMICHIBOXSECRET">1 TICKET <br> MICHI-BOX DORADO <br> GRATIS</button>
 </div>
 
 <div class="compra">
-  <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 02_mt_paquete.webp);">  </div>
-  <button class="botonCopiar" data-codigo="0550MBMTHU888555TH">1 CARTA <br> MAULLIDO TROPICAL <br> GRATIS</button>
+  <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 01.webp);">  </div>
+  <button class="botonCopiar" data-codigo="020AMB0562HGHYUD5">1 TICKET <br> MICHI-BOX <br> GRATIS</button>
+</div>
+
+<div class="compra">
+  <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 02_mt.webp);">  </div>
+  <button class="botonCopiar" data-codigo="0550MBMTHU888555TH">1 TICKET <br> MAULLIDO TROPICAL <br> GRATIS</button>
 </div>
 
 
