--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-<meta name="color-scheme" content="only light">
+
 
   
   <title>Michi Box-Card Game</title>
@@ -42,11 +42,15 @@
         style="background-image: url(./assets/logo_instagram.webp);"
    class="botoninstagram" 
    target="_blank" 
-   rel="noopener noreferrer">
+   rel="noopener noreferrer"><p>Instagram</p>
 </a> 
 <a onclick="mostrarRegalos()"
         style="background-image: url(./assets/boton_regalos_pequeño.webp);"
-   class="botoninstagram" >
+   class="botoninstagram" > <p>Regalos</p>
+</a> 
+<a onclick="mostrarDonar()"
+        style="background-image: url(./assets/boton_donar_pequeño.webp);"
+   class="botoninstagram" ><p>Donar</p>
 </a> 
       </div>
 
@@ -57,7 +61,6 @@
       <a onclick="mostrarQuees()" class="iconomenu lazy-michi" style="background-image: url(./assets/boton_QUE_ES.webp);"></a>
       <a onclick="mostrarNoticias()" class="iconomenu lazy-michi" style="background-image: url(./assets/boton_NOTICIAS_NUEVO.webp);"></a>
       <a  class="iconomenu lazy-michi" style="background-image: url(./assets/boton_tienda.webp); filter: grayscale(1);"></a>
-      <a onclick="mostrarDonar()" class="lazy-michi botondonarmenu" style="width: 300px; height: 50px; background-image: url(./assets/DONAR_ICON.webp); background-size: contain; background-position: center; background-repeat: no-repeat;"></a>
     </div>
 </div>
 <DIV class="infoandroid" data-lazy="true"></DIV>
@@ -68,7 +71,7 @@
   </button>
 
 
-    <p class="descripcionbanner">MICHI BOX - Juego de gatos coleccionables V4.0.1 Proyectual Digitalización Cat.Gramajo I 2025. diseño y realización: José Ignacio Pyptyk</p>
+    <p class="descripcionbanner"> <b>SE RECOMIENDA DESACTIVAR EL "MODO OSCURO" DEL DISPOSITIVO PARA UNA MEJOR EXPERIENCIA. <br> </b>MICHI-BOX V4.0.1  diseño y realización: José Ignacio Pyptyk</p>
   </div>
   <!------------------------------------------------------------------------>
 
