--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
       <div class="botonesredes">
         <a href="https://www.instagram.com/michibox_game?igsh=MWNreXdzczB6OXU4dQ==" 
         style="background-image: url(./assets/logo_instagram.webp);"
-   class="botoninstagram" 
+   class="botoninstagram lazy-michi" 
    target="_blank" 
    rel="noopener noreferrer"><p>Instagram</p>
 </a> 
 <a onclick="mostrarRegalos()"
         style="background-image: url(./assets/boton_regalos_pequeño.webp);"
-   class="botoninstagram" > <p>Regalos</p>
+   class="botoninstagram lazy-michi" > <p>Regalos</p>
 </a> 
 <a onclick="mostrarDonar()"
         style="background-image: url(./assets/boton_donar_pequeño.webp);"
-   class="botoninstagram" ><p>Donar</p>
+   class="botoninstagram lazy-michi" ><p>Donar</p>
 </a> 
       </div>
 
