--- a/regalos.html
+++ b/regalos.html
@@ -34,29 +34,43 @@
 
   <div class="compra">
   <div class="imagenproducto" style="background-image: url(./assets/TICKET_dorado_paquete.webp);">  </div>
-  <button class="botonCopiar" data-codigo="NAVIDAD2025MICHIVSARBOL">1 CARTA FESTIVA <br> NAVIDAD 2025<br> GRATIS</button>
+<DIV class="textoyboton">
+  <p> <b>¡Sobre festivo Navideño de regalo! </b> <br> Contiene una carta Festiva </p>
+    <button class="botonCopiar" data-codigo="NAVIDAD2025MICHIVSARBOL"> CANJEAR </button>
+</DIV>
 </div>
 
   <div class="compra">
   <div class="imagenproducto" style="background-image: url(./assets/TICKET_dorado_paquete.webp);">  </div>
-  <button class="botonCopiar" data-codigo="AÑONUEVO20252026">1 CARTA FESTIVA <br> AÑO NUEVO 2026<br> GRATIS</button>
+<DIV class="textoyboton">
+  <p> <b>¡Sobre de Año nuevo de regalo! </b> <br> Contiene una carta Festiva </p>
+    <button class="botonCopiar" data-codigo="AÑONUEVO20252026"> CANJEAR </button>
+</DIV>
 </div>
 
-<div class="compra">
+  <div class="compra">
   <div class="imagenproducto" style="background-image: url(./assets/TICKET_dorado.webp);">  </div>
-  <button class="botonCopiar" data-codigo="036SUPERHEROESMICHIBOXSECRET">1 TICKET <br> MICHI-BOX DORADO <br> GRATIS</button>
+<DIV class="textoyboton">
+  <p> <b>1 TICKET DORADO </b> <br> Valido por una carta legendaria </p>
+    <button class="botonCopiar" data-codigo="036SUPERHEROESMICHIBOXSECRET"> CANJEAR </button>
+</DIV>
 </div>
 
-<div class="compra">
-  <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 01.webp);">  </div>
-  <button class="botonCopiar" data-codigo="020AMB0562HGHYUD5">1 TICKET <br> MICHI-BOX <br> GRATIS</button>
-</div>
-
-<div class="compra">
+  <div class="compra">
   <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 02_mt.webp);">  </div>
-  <button class="botonCopiar" data-codigo="0550MBMTHU888555TH">1 TICKET <br> MAULLIDO TROPICAL <br> GRATIS</button>
+<DIV class="textoyboton">
+  <p> <b> 1 TICKET </b> Válido por una carta RARA <br> de MAULLIDO TROPICAL </p>
+    <button class="botonCopiar" data-codigo="020AMB0562HGHYUD5"> CANJEAR </button>
+</DIV>
 </div>
 
+  <div class="compra">
+  <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 01.webp);">  </div>
+<DIV class="textoyboton">
+  <p> <b> 1 TICKET </b>  Válido  por una carta <br> RARA de MICHI BOX</p>
+    <button class="botonCopiar" data-codigo="0550MBMTHU888555TH"> CANJEAR </button>
+</DIV>
+</div>
 
 
 </div>
