--- a/regalos.html
+++ b/regalos.html
@@ -51,7 +51,7 @@
   <div class="compra">
   <div class="imagenproducto" style="background-image: url(./assets/TICKET_dorado.webp);">  </div>
 <DIV class="textoyboton">
-  <p> <b>1 TICKET DORADO </b> <br> Valido por una carta legendaria </p>
+  <p> <b>1 TICKET DORADO </b> <br> Válido por una carta legendaria </p>
     <button class="botonCopiar" data-codigo="036SUPERHEROESMICHIBOXSECRET"> CANJEAR </button>
 </DIV>
 </div>
@@ -60,7 +60,7 @@
   <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 02_mt.webp);">  </div>
 <DIV class="textoyboton">
   <p> <b> 1 TICKET </b> Válido por una carta RARA <br> de MAULLIDO TROPICAL </p>
-    <button class="botonCopiar" data-codigo="020AMB0562HGHYUD5"> CANJEAR </button>
+    <button class="botonCopiar" data-codigo="0550MBMTHU888555TH"> CANJEAR </button>
 </DIV>
 </div>
 
@@ -68,7 +68,7 @@
   <div class="imagenproducto" style="background-image: url(./assets/TICKET\ 01.webp);">  </div>
 <DIV class="textoyboton">
   <p> <b> 1 TICKET </b>  Válido  por una carta <br> RARA de MICHI BOX</p>
-    <button class="botonCopiar" data-codigo="0550MBMTHU888555TH"> CANJEAR </button>
+    <button class="botonCopiar" data-codigo="020AMB0562HGHYUD5"> CANJEAR </button>
 </DIV>
 </div>
 
