--- a/index.html
+++ b/index.html
@@ -25,6 +25,33 @@
 <body class="indexbackground">
 <main>
 
+<!-- OVERLAY INSTAGRAM -->
+<div id="instagram-overlay">
+  <div class="overlay-box">
+    <h2>Abrir en navegador</h2>
+    <p>
+      Estás viendo Michi Box desde Instagram.<br><br>
+      Para que funcione correctamente:
+    </p>
+    <ol>
+      <li>Tocá los <b>⋮ tres puntos</b></li>
+      <li>Elegí <b>“Abrir en navegador”</b></li>
+    </ol>
+    <p class="small">
+      (Chrome / Safari)
+    </p>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
  
 <div class="pantallacargando" style="  animation: cargando 5s !important;">
    <div class="spinner"></div>
