--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
 <body class="indexbackground">
 <main>
 
+
+
+<!-- CARTEL SOLO PARA INSTAGRAM -->
+<div id="aviso-instagram">
+  <p>ABRÍ EN EL NAVEGADOR PARA DESCARGAR</p>
+</div>
+
+
+
+
+
+
+
  
 <div class="pantallacargando" style="  animation: cargando 5s !important;">
    <div class="spinner"></div>
