--- a/noticias.html
+++ b/noticias.html
@@ -30,6 +30,23 @@ Explorá los nuevos portales interdimensionales y descubrí michis nunca antes v
 Esta expansión incorpora la nueva categoría: <br> <b> ● OBJETO DIMENSIONAL ●</b> <br></br> y presenta cartas exclusivas de rareza: <br> <b>● DIMENSIONAL ●</b> <br></br><br></br> Nuevos sobres físicos y cartas digitales <br> ●RASGUÑO DIMENSIONAL● <br> ¡YA DISPONIBLE!</p>
 -->  
 
+<DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_008.webp);"></DIV>
+<p>
+  <b>● Actualización V4.1.1</b><br>
+  🎉 ¡NUEVA CARTA FESTIVA GRATIS! 🎉<br>
+  canjeala en el apartado "regalos". <BR></BR>
+  <b> FELIZ SAN VALENTÍN<br>
+  2026</b><br><br>
+  💘💘💘<BR></BR>
+  Además del regalo festivo, la app recibió<br>una actualización muy importante:<br><br>
+  🚀 Optimización del 80% en el<br>rendimiento general.<br>
+  🛠️ Corrección de errores, bugs,<br>animaciones y efectos.<br>
+  📱 Mejora en la compatibilidad<br>con los dispositivos.
+</p>
+
+<BR><BR></BR></BR>
+
+
         <DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_007.webp);"></DIV>
 <p> Llegaron los sobres digitales FESTIVOS. <br> 
 cada fecha destacada vendrá acompañada de un regalo: <br> 
@@ -53,9 +70,6 @@ PRÓSPERO AÑO NUEVO
 <DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_004.webp);"></DIV>
 <p> <b>● Actualización V2.0.5. </b> <BR></BR> El verano llega con nuevos felinos exóticos y cajas llenas de frescura en esta expansión que nadie pidió, pero todos necesitaban: Maullido Tropical. <BR></BR> Más gatos, más cajas y, por supuesto… ¡más incoherencias! </p>
 
-
-<DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_003.webp);"></DIV>
-<p> Se está trabajando para implementar una tienda digitál para la obtención de contenido MICHI BOX <br> Póximamente podrás disfrutar de la tienda en el juego.  </p>
 
 
 <DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_001.webp);"></DIV>
