--- a/regalos.html
+++ b/regalos.html
@@ -31,20 +31,28 @@
 
 <div class="opcionesdecompra">
 
+    <div class="compra">
+  <div class="imagenproducto" style="background-image: url(./assets/ticket_sanvalentin_2026.webp);">  </div>
+<DIV class="textoyboton">
+  <p> <b>¡Carta festiva de SAN VALENTÍN! </b> <br> Feliz San Valentín 2026 </p>
+    <button class="botonCopiar" data-codigo="02546935SANVALENTIN2026"> CANJEAR </button>
+</DIV>
+</div>
+
 
   <div class="compra">
-  <div class="imagenproducto" style="background-image: url(./assets/TICKET_dorado_paquete.webp);">  </div>
+  <div class="imagenproducto" style="background-image: url(./assets/ticket_añonuevo_2026.webp);">  </div>
 <DIV class="textoyboton">
-  <p> <b>¡Sobre festivo Navideño de regalo! </b> <br> Contiene una carta Festiva </p>
-    <button class="botonCopiar" data-codigo="NAVIDAD2025MICHIVSARBOL"> CANJEAR </button>
+  <p> <b>¡Carta de Año nuevo de regalo! </b> <br> ¡Feliz 2026 para todos! </p>
+    <button class="botonCopiar" data-codigo="AÑONUEVO20252026"> CANJEAR </button>
 </DIV>
 </div>
 
   <div class="compra">
-  <div class="imagenproducto" style="background-image: url(./assets/TICKET_dorado_paquete.webp);">  </div>
+  <div class="imagenproducto" style="background-image: url(./assets/ticket_navidad_2025.webp);">  </div>
 <DIV class="textoyboton">
-  <p> <b>¡Sobre de Año nuevo de regalo! </b> <br> Contiene una carta Festiva </p>
-    <button class="botonCopiar" data-codigo="AÑONUEVO20252026"> CANJEAR </button>
+  <p> <b>¡Carta festiva Navideña de regalo! </b> <br> Michi Caos Navideño </p>
+    <button class="botonCopiar" data-codigo="NAVIDAD2025MICHIVSARBOL"> CANJEAR </button>
 </DIV>
 </div>
 
